--- a/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pg.autyzm.przyjazneemocje"
+    package="pg.autyzm.graprzyjazneemocje"
     android:sharedUserId="autyzm.pg">
 
-    <uses-feature android:name="android.hardware.camera" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -13,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".chooseImages.ChooseImages"
-            android:label="@string/title_choose_img"
-            android:theme="@android:style/Theme.Dialog"></activity>
-        <activity android:name=".LevelConfiguration"></activity>
     </application>
 
 </manifest>
