Usuniecie zdjec narkomanow, dodanie punktacji i koncowego ekranu gry

--- a/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AnimationActivity"/>
+        <activity android:name=".EndActivity"/>
     </application>
 
 </manifest>
