--- a/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -18,8 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AnimationActivity"/>
-        <activity android:name=".EndActivity"/>
+        <activity android:name=".AnimationActivity" />
+        <activity android:name=".EndActivity" />
+        <activity
+            android:name=".LevelFailedActivity"
+            android:label="@string/title_activity_level_failed"></activity>
     </application>
 
 </manifest>
