animacja po przejściu poziomu

--- a/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AnimationActivity" />
+        <activity android:name=".AnimationEndActivity" />
         <activity android:name=".EndActivity" />
         <activity
             android:name=".LevelFailedActivity"
