--- a/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/GraPrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -9,21 +9,30 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AnimationActivity" />
-        <activity android:name=".AnimationEndActivity" />
-        <activity android:name=".EndActivity" />
+        <activity
+            android:name=".AnimationActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".AnimationEndActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".EndActivity"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".LevelFailedActivity"
-            android:label="@string/title_activity_level_failed"></activity>
+            android:label="@string/title_activity_level_failed"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
