--- a/PrzyjazneEmocje/app/src/main/AndroidManifest.xml
+++ b/PrzyjazneEmocje/app/src/main/AndroidManifest.xml
@@ -14,19 +14,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".chooseImages.ChooseImages"
             android:label="@string/title_choose_img"
-            android:theme="@android:style/Theme.Dialog"></activity>
-        <activity android:name=".LevelConfiguration"></activity>
-        <activity android:name=".CameraActivity"></activity>
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".LevelConfiguration"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".CameraActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
