--- a/PrzyjazneEmocje/mylibrary/build.gradle
+++ b/PrzyjazneEmocje/mylibrary/build.gradle
@@ -27,5 +27,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '4.45'
     testCompile 'junit:junit:4.12'
 }
